@@ -1,3 +1,8 @@
+2004-04-12 Bernhard Held <bernhard AT bernhardheld.de>
+
+	* src/SDCCast.c (decorateType): fixed bug #898889,
+	cast result of a literal complement too
+
 2004-04-11 Bernhard Held <bernhard AT bernhardheld.de>
 
 	* src/SDCCicode.c (geniCodeLogic): made it static,
